--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 version: "3.3"
 
 networks:
-  network_default:
+  network_fixed:
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.20.0.0/16
 
 services:
   rabbitmq.test:
@@ -10,7 +14,8 @@ services:
     ports:
       - '15672:15672'
     networks:
-      - network_default
+      network_fixed:
+        ipv4_address: 172.20.0.2
     volumes:
       - volume_rabbitmq:/var/lib/rabbitmq
 
@@ -21,7 +26,8 @@ services:
     ports:
       - '10080:80'
     networks:
-      - network_default
+      network_fixed:
+        ipv4_address: 172.20.0.3
 
   consumer.test:
     build: ./consumer/
@@ -30,7 +36,8 @@ services:
     ports:
       - '10081:80'
     networks:
-      - network_default
+      network_fixed:
+        ipv4_address: 172.20.0.4
 
   tcpdump:
     image: lnhcode/tool
