--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+debug=false
 server.port=80
 spring.application.name=consumer
+
+spring.rabbitmq.host=rabbitmq.test
+spring.rabbitmq.port=5672
+spring.rabbitmq.ssl.enabled=false
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=dvh
+spring.rabbitmq.dynamic=true
