--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
