--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 debug=false
 server.port=80
 spring.application.name=consumer
-
 spring.rabbitmq.host=rabbitmq.test
 spring.rabbitmq.port=5672
 spring.rabbitmq.ssl.enabled=false
@@ -9,3 +8,5 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=dvh
 spring.rabbitmq.dynamic=true
+spring.redis.host=redis.test
+spring.redis.port=6379
