--- a/.github/workflows/spring.yml
+++ b/.github/workflows/spring.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
       - name: git checkout
         uses: actions/checkout@v1
+
+      - name: compile
+        run: mvn compile --quiet
+
       - name: test
-        env:
-          debug: false
         run: mvn test
