--- a/.github/workflows/spring.yml
+++ b/.github/workflows/spring.yml
@@ -14,8 +14,5 @@ jobs:
       - name: git checkout
         uses: actions/checkout@v1
 
-      - name: compile
-        run: mvn compile --quiet
-
       - name: test
-        run: mvn test
+        run: mvn test --quiet
