--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - volume_rabbitmq:/var/lib/rabbitmq
 
-  producer.test:
+  producer1.test:
     build: ./producer/
     depends_on:
       - rabbitmq.test
@@ -29,17 +29,30 @@ services:
     networks:
       network_fixed:
         ipv4_address: 172.20.0.3
+    environment:
+      - HOSTNAME=producer1.test
 
-  consumer.test:
+  consumer1.test:
     build: ./consumer/
     depends_on:
       - rabbitmq.test
       - redis.test
-    ports:
-      - '10081:80'
     networks:
       network_fixed:
         ipv4_address: 172.20.0.4
+    environment:
+      - HOSTNAME=consumer1.test
+
+  consumer2.test:
+    build: ./consumer/
+    depends_on:
+      - rabbitmq.test
+      - redis.test
+    networks:
+      network_fixed:
+        ipv4_address: 172.20.0.44
+    environment:
+      - HOSTNAME=consumer2.test
 
   tcpdump:
     image: lnhcode/tool
