--- a/producer/src/main/resources/application.properties
+++ b/producer/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.rabbitmq.virtual-host=dvh
 spring.rabbitmq.dynamic=true
 spring.redis.host=redis.test
 spring.redis.port=6379
+logging.level.org.springframework.amqp=TRACE
