--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       - volume_tcpdump:/data
 
   redis.test:
-    image: redis:6.2
+    image: ghcr.io/linianhui/redis:6.2
     networks:
       network_fixed:
         ipv4_address: 172.20.0.5
