--- a/.github/workflows/spring.yml
+++ b/.github/workflows/spring.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
 
     container:
       # https://hub.docker.com/_/maven/
